--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -29,28 +29,28 @@ marketing:
 # Site header
 header:
   navbar:
-    enable: true
+    enable: false
     blox: "navbar"
     fixed_to_top: true
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: "Alessandro Galloni"
 
-# Site footer
-footer:
-  copyright:
-    notice: '© {year} Alessandro Galloni. This work is licensed under {license}'
-    license:
-      enable: true
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
+# # Site footer
+# footer:
+#   copyright:
+#     notice: '© {year} Alessandro Galloni. This work is licensed under {license}'
+#     license:
+#       enable: true
+#       allow_derivatives: false
+#       share_alike: true
+#       allow_commercial: false
 
-# Localization
-locale:
-  date_format: 'Jan 2, 2024'
-  time_format: '3:04 PM'
+# # Localization
+# locale:
+#   date_format: 'Jan 2, 2024'
+#   time_format: '3:04 PM'
 
 # Site features
 features:
