--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,8 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - master
-      - main  # Added in case you're using 'main' as default branch
+      - main
 
 jobs:
   build-deploy:
